<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_black"
    android:orientation="vertical" >

        <TextView
            android:id="@+id/sensorXLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/pitchLabel" />

        <TextView
            android:id="@+id/sensorXValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/sensorXLabel"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/sensorYLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sensorXLabel"
            android:layout_alignRight="@+id/sensorXLabel"
            android:paddingLeft="16dp"
            android:text="@string/rollLabel" />

        <TextView
            android:id="@+id/sensorYValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/sensorYLabel"
            android:layout_below="@+id/sensorXValue"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

    <ToggleButton
        android:id="@+id/sendDataToggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:checked="false"
        android:textOff="@string/sendingDataOFF"
        android:textOn="@string/sendingDataON" />

</RelativeLayout>